final clone using html,css

--- a/spotifyclone/index.html
+++ b/spotifyclone/index.html
@@ -77,20 +77,20 @@
             <div class="cards-container">
                 <div class="card">
                     <img src="./assets/card2img.jpeg" class="card-img">
-                    <p class="card-title">Top 50 - Global</p>
-                    <p class="card-info">Your daily updates of the most player tracks...</p>
+                    <p class="card-title">Mahi Jinna</p>
+                    <p class="card-info">Darshan Raval - <br> T-series</p>
                 </div>
 
                 <div class="card">
                     <img src="./assets/card3img.jpeg" class="card-img">
-                    <p class="card-title">Top 50 - Global</p>
-                    <p class="card-info">Your daily updates of the most player tracks...</p>
+                    <p class="card-title">Lofi mix</p>
+                    <p class="card-info"> Mere paas tum ho - Rahat Fateh Ali Khan</p>
                 </div>
 
                 <div class="card">
                     <img src="./assets/card4img.jpeg" class="card-img">
-                    <p class="card-title">Top 50 - Global</p>
-                    <p class="card-info">Your daily updates of the most player tracks...</p>
+                    <p class="card-title">Boom</p>
+                    <p class="card-info">Exclusive energetic tracks of the week...</p>
                 </div>
 
                 <div class="card">
@@ -134,6 +134,9 @@
     </div>
      <div class="music-player">
             <div class="album">
+                    <img src="./assets/player_icon1.png" class="hw hovering">
+                    <img src="./assets/forward_icon.png" class="hw hovering">
+                    <img src="./assets/player_icon5.png" class="hw hovering">
 
             </div>
             <div class="player">
@@ -151,7 +154,9 @@
                 </div>                                                                               
             </div>
             <div class="controls">
-                
+                <img src="./assets/library_icon.png" class="hw hovering">
+                    <img src="./assets/backward_icon.png" class="hw hovering">
+                    <img src="./assets/player_icon5.png" class="hw hovering">
             </div>
         </div>
 </body>
