--- a/spotifyclone/index.html
+++ b/spotifyclone/index.html
@@ -149,7 +149,7 @@
                 </div>
                 <div class="playback-bar">
                     <span class="curr-time ">00:00</span>
-                    <input type="range" min="0" max="100" class="progress-bar" >
+                    <input type="range" min="0" max="100" class="progress-bar" value="0">
                     <span class="tot-time">3.33</span>
                 </div>                                                                               
             </div>
