--- a/simonsay/index.html
+++ b/simonsay/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title >Simon Says </title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" type="image/png" href="mylogo.png">
 </head>
 <body>
     <h1>Simon says Game</h1>
     <h2>Press any key to start the game</h2>
+    <div id="rules">
+    <h3>How to Play</h3>
+    <ol>
+        <li>Press any key to start the game.</li>
+        <li>Watch the sequence of colors shown.</li>
+        <li>Click the colors in the same order.</li>
+        <li>Each level adds one new color.</li>
+        <li>A wrong click ends the game.</li>
+    </ol>
+</div>
 
     <div class="btn-container">
         <div class="line-one">
