updates for mobile

--- a/simonsay/index.html
+++ b/simonsay/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Simon says Game</h1>
-    <h2>Press any key to start the game</h2>
+    <h2>Press any key or tap to start the game</h2>
     <div id="rules">
     <h3>How to Play</h3>
     <ol>
