--- a/simonsay/index.html
+++ b/simonsay/index.html
@@ -13,7 +13,7 @@
     <div id="rules">
     <h3>How to Play</h3>
     <ol>
-        <li>Press any key to start the game.</li>
+        <li>Press any key or tap to start the game.</li>
         <li>Watch the sequence of colors shown.</li>
         <li>Click the colors in the same order.</li>
         <li>Each level adds one new color.</li>
